Header structure, styling and responsivity

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
+  <link rel="stylesheet" href="styles/general-styles.css">
+  <link rel="stylesheet" href="styles/header.css">
 </head>
 <body>
-  
+  <header class="header">
+    <h1>TravelThoughts</h1>
+
+    <nav class="header-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Categories</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
