--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/general-styles.css">
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/main-content.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 <body>
   <header class="header">
@@ -67,8 +68,8 @@
       <section class="search-bar">
         <h4>Search</h4>
         <form >
-          <input type="text" placeholder="Search..." >
-          <input type="submit" value="Search">
+          <input type="text" placeholder="Search..." class="search">
+          <input type="submit" value="Search" class="submit-btn">
         </form>
       </section>  
         
